--- a/config/database.yml
+++ b/config/database.yml
@@ -34,9 +34,9 @@ production:
   pool: 5
   timeout: 5000
   socket: /tmp/mysql.sock
-  username: b7e3ed21c3c5fd
-  password: 30c5b071
-  host: localhost
+  username: <%= ENV['USERNAME_DATABASE'] %>
+  password: <%= ENV['PASSWORD_DATABASE'] %>
+  host: <%= ENV['CLEARDB_DATABASE_URL']%>
   database: duckrails_production
 
 cucumber:
