--- a/config/database.yml
+++ b/config/database.yml
@@ -5,11 +5,9 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   pool: 5
-  timeout: 5000
-  socket: /tmp/mysql.sock
 
 development:
   <<: *default
